// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription AfterTitle should display only the activate action because the subscription is cancelled 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-2"
      type="button"
    >
      <span
        id="action-button-2-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          attach_money
        </i>
      </span>
       Activate
    </button>
  </span>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created
      :
       
    </span>
    <span
      class="widgetFieldValue"
    />
  </div>
</div>
`;

exports[`Subscription AfterTitle should display only the cancel action because the subscription is not cancelled 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-1"
      type="button"
    >
      <span
        id="action-button-1-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          block
        </i>
      </span>
       Cancel
    </button>
  </span>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created
      :
       
    </span>
    <span
      class="widgetFieldValue"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/admin/customers/asd1as2d3/subscriptions/789"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/admin/customers/asd1as2d3/subscriptions/789"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="badge mt-2"
    />
  </div>
</div>
`;
